--- a/src/main/resources/com/example/inventory_m_s/all-goods-view.fxml
+++ b/src/main/resources/com/example/inventory_m_s/all-goods-view.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -19,6 +20,8 @@
                 </Text>
                 <Button layoutX="14.0" layoutY="17.0" mnemonicParsing="false" onAction="#onLogOut" text="logout" />
                 <Button layoutX="101.0" layoutY="17.0" mnemonicParsing="false" onAction="#onMain" text="main" />
+            <TextField fx:id="searchText" layoutX="197.0" layoutY="17.0" promptText="поиск" />
+            <Button layoutX="382.0" layoutY="17.0" mnemonicParsing="false" onAction="#onSearch" text="search" />
             </children>
         </Pane>
       <TableView fx:id="all_goods_table" prefHeight="342.0" prefWidth="600.0">
