--- a/src/main/resources/com/example/inventory_m_s/update-view.fxml
+++ b/src/main/resources/com/example/inventory_m_s/update-view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.inventory_m_s.UpdateController">
+<VBox prefHeight="299.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.inventory_m_s.UpdateController">
     <children>
         <Pane prefHeight="62.0" prefWidth="600.0" style="-fx-background-color: #333;">
             <children>
